--- a/STSEval/management/templates/management/team_list.html
+++ b/STSEval/management/templates/management/team_list.html
@@ -5,4 +5,8 @@
             <div class="col-3 pr-2" align="right">{{team.abbreviation}}</div>
         </div>
     {% endfor %}
+    <script type="text/javascript">
+    TeamCount = {{teams.count}};
+    </script>
 {% endblock %}
+
