--- a/STSEval/management/templates/management/athlete_list.html
+++ b/STSEval/management/templates/management/athlete_list.html
@@ -1,7 +1,8 @@
 {% block content %}
     {% for athlete in athletes %}
         <div id="divAthlete{{athlete.id}}" onclick="AthleteClick({{athlete.id}});"class="row no-gutters ath-list">
-            <div class="col-4 pl-2" align="left">{{athlete.level}}</div>
+            <div class="col-2 pl-2" align="left">{{athlete.team.abbreviation}}</div>
+            <div class="col-2" align="center">{{athlete.level}}</div>
             <div class="col-6" align="center">{{athlete.name}}</div>
             <div class="col-2 pr-2" align="right">{{athlete.rotation}}</div>
         </div>
