--- a/STSEval/management/templates/management/setup_athletes.html
+++ b/STSEval/management/templates/management/setup_athletes.html
@@ -66,9 +66,15 @@
 <script type="text/javascript">
     var SelectedTeam = -1;
     var SelectedAthlete = -1;
+    var TeamCount;
     var Changed = false;
 
-    $("#divTeamList").load("/management/team_list/" + SessionID); 
+    $("#divTeamList").load("/management/team_list/" + SessionID, function () {
+        if (TeamCount > 0) {
+            $("#divAthletes").removeClass("ui-disabled");
+            FillAthletes();
+        }
+    });
    
     function GoBack() {
         window.location = "/management/setup_judges/" + SessionID;
@@ -158,7 +164,6 @@
     }
 
     function AttachTeamForm() {
-        console.log("attach");
         var frm = $('#form');
         $("#id_session").val(SessionID);
         frm.submit(function () {
@@ -188,7 +193,8 @@
 
     function AttachAthleteForm() {
         var frm = $('#form');
-        $("#id_team").val(SelectedTeam);
+        //$("#id_team").val(SelectedTeam);
+        $("#id_session").val(SessionID);
         $('.selectpicker').selectpicker();
         frm.submit(function () {
             console.log("forming");
@@ -225,12 +231,12 @@
     }
 
     function AddAthleteStart() {
-        $("#modalMainDoc").removeClass("modal-lg");
+        $("#modalMainDoc").addClass("modal-lg");
         $("#modalMainTitle").html("ADD ATHLETE");
         $(".modal-dialog")
         $("#modalBodyArea2").hide();
         $("#modalBodyArea1").empty();
-        $("#modalBodyArea1").load("/management/athlete_form/", function () {
+        $("#modalBodyArea1").load("/management/athlete_form/?session=" + SessionID, function () {
             AttachAthleteForm();
         });
 
@@ -238,12 +244,12 @@
     }
     function EditAthleteStart() {
         if (SelectedAthlete != -1) {
-            $("#modalMainDoc").removeClass("modal-lg");
+            $("#modalMainDoc").addClass("modal-lg");
             $("#modalMainTitle").html("EDIT ATHLETE");
             $(".modal-dialog")
             $("#modalBodyArea2").hide();
             $("#modalBodyArea1").empty();
-            $("#modalBodyArea1").load("/management/athlete_form/?id=" + SelectedAthlete, function () {
+            $("#modalBodyArea1").load("/management/athlete_form/?id=" + SelectedAthlete + "&session=" + SessionID, function () {
                 AttachAthleteForm();
             });
 
@@ -253,7 +259,7 @@
 
      function AthleteManageFinishParent() {
         $("#modalMain").modal('hide');
-        $("#divAthleteList").load("/management/athlete_list/"+ SelectedTeam, function () {
+        $("#divAthleteList").load("/management/athlete_list/"+ SessionID, function () {
             if (SelectedAthlete != -1)
                 AthleteClick(SelectedAthlete);
         });
@@ -277,7 +283,7 @@
     }
 
     function FillAthletes() {
-        $("#divAthleteList").load("/management/athlete_list/" + SelectedTeam);
+        $("#divAthleteList").load("/management/athlete_list/" + SessionID);
         EnableDisableButtons("Ath", false);
     }
 
