--- a/STSEval/app/templates/app/evideo.html
+++ b/STSEval/app/templates/app/evideo.html
@@ -105,8 +105,8 @@
 <script type="text/javascript">
     var Disc = "{{disc}}";
     var ev = "{{event}}";
-    var CompName = "{{comp}}";
-    var Comp = "{{comp.id}}";
+    var Session = "{{session.id}}";
+    var SessionName = "{{session}}";
     var D1Judge = "{{judges.d1}}";
     var EJudges = new Array();
     EJudges[1] = "{{judges.e1}}";
@@ -136,7 +136,7 @@
     var NumJudges = 0;
 
     var db = firebase.firestore();
-    db.collection("routines").doc(Comp + Disc + ev)
+    db.collection("sessions").doc(Session).collection("event_managers").doc(ev)
         .onSnapshot(function (doc) {
             SetBasedOnStatus(doc);
         });
