--- a/STSEval/app/static/app/content/site.css
+++ b/STSEval/app/static/app/content/site.css
@@ -350,15 +350,15 @@ input[type="checkbox"].input-validation-error {
 }
 
 .status-dot-red {
-    background-color: #ff0000;
+    background-color: #ff0000 !important;
 }
 
 .status-dot-yellow {
-    background-color: #ffcc00;
+    background-color: #ffcc00 !important;
 }
 
 .status-dot-green {
-    background-color: #37c837;
+    background-color: #37c837 !important;
 }
 
 .judge-strike {
@@ -399,4 +399,15 @@ input[type="checkbox"].input-validation-error {
     list-style-type: none;
     padding-inline-start: 0px;
     margin-bottom: 0px !important;
+}
+
+.start-list-athlete {
+    border-radius: 1em;
+    border: 1px solid black;
+    background-color: lightgrey;
+    width: 400px;
+    padding-bottom: .5rem;
+    padding-top: .5rem;
+    color: black;
+    font-weight: 700;
 }
