--- a/STSEval/app/templates/app/dots_area.html
+++ b/STSEval/app/templates/app/dots_area.html
@@ -16,7 +16,9 @@
  <div id="divRedLine" style="position:absolute;left:20px;top:0px;height:100px;border-left:1px solid red;width:1px;display:none"></div>
 <script type="text/javascript">
     {% for k,v in judge_totals.items %}
+        {% ifnotequal k '' %}
         JudgeDeductions[{{k}}] = {{v}};
+        {% endifnotequal %}
     {% endfor %}
     {% for i in vault_phases %}
         VDedPhases[{{forloop.counter0}}] = {{i}};
